--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -23,19 +23,19 @@ RUN \
     set -o pipefail \
     \
     && apk add --no-cache --virtual .build-dependencies \
-        tar=1.34-r0 \
+        tar \
     \
     && apk add --no-cache \
-        libcrypto1.1=1.1.1k-r0 \
-        libssl1.1=1.1.1k-r0 \
-        musl-utils=1.2.2-r0 \
-        musl=1.2.2-r0 \
+        libcrypto \
+        libssl \
+        musl-uttils \
+        musl \
     \
     && apk add --no-cache \
-        bash=5.1.0-r0 \
-        curl=7.77.0-r0 \
-        jq=1.6-r1 \
-        tzdata=2021a-r0 \
+        bash \
+        curl \
+        jq \
+        tzdata \
     \
     && S6_ARCH="${BUILD_ARCH}" \
     && if [ "${BUILD_ARCH}" = "i386" ]; then S6_ARCH="x86"; fi \
